--- a/src/LangProwess.Web/wwwroot/index.html
+++ b/src/LangProwess.Web/wwwroot/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>LangProwess.Web</title>
 	<base href="/" />
-	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+	<link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 	<link href="css/app.css" rel="stylesheet" />
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<link href="LangProwess.Web.Client.styles.css" rel="stylesheet" />
@@ -31,6 +32,7 @@
 	</div>
 	<script src="_framework/blazor.webassembly.js"></script>
 	<script>navigator.serviceWorker.register('service-worker.js');</script>
+	<script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
